# utility-ai-sandbox

./: Cargo.toml
resources/: test_data.json
src/: main.rs
src/game/: agent.rs  location.rs  mod.rs  needs.rs  state.rs
src/utility_ai/: consideration.rs  decision.rs  decision_context.rs  decision_maker.rs  input_param.rs  mod.rs  response_curve.rs  traits.rs
src/utils/: clamp.rs  mod.rs
