[package]
name = "utility-ai-sandbox"
version = "0.1.0"
authors = ["Derek Stobbe <djstobbe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
pretty_env_logger = "0.4.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
maplit = "1.0.2"
